# open-vtb

./: .bumpversion.cfg  .dockerignore  .gitignore  .readthedocs.yaml  CHANGELOG.rst  CONTRIBUTING.md  Dockerfile  INSTALL.rst  README.EN.rst  README.rst  docker-compose.yml  dotenv.example  package-lock.json  package.json  pyproject.toml  setup.cfg
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: feature_request.yml
.github/workflows/: ci.yml  code-quality.yml  codeql-analysis.yml  macos.yml  oas.yml  quick-start.yml
docker/: docker-compose.keycloak.yml  docker-compose.observability.yml  init-db.sql
docker/keycloak/data/: test-realm.json
docker/observability/: README.md
docker/observability/otel/: otel-collector-config.yml
docker/postgres.entrypoint-initdb.d/: 0002-open-vtb-extensions.sh
docker/setup_configuration/: data.yaml
docs/: conf.py  index.rst  testing.rst
docs/_static/: theme_overrides.css
docs/development/: authentication.rst  index.rst
docs/installation/: cloud_events.rst  health_checks.rst  index.rst
docs/installation/config/: env_configuration.rst  index.rst  openvtb_configuration.rst  openvtb_configuration_cli.rst
docs/installation/manual/: api-authorizations.rst  index.rst  oidc.rst
docs/installation/observability/: index.rst  logging.rst
docs/introduction/: index.rst  team.rst  versioning.rst
docs/introduction/open-source/: index.rst
docs/manual/: api-authorizations.rst  index.rst  oidc.rst  users.rst
requirements/: base.in  base.txt  ci.txt  dev.in  dev.txt  docs.in  test-tools.in
src/: manage.py
src/openvtb/: __init__.py  setup.py  urls.py  wsgi.py
src/openvtb/accounts/: __init__.py  admin.py  apps.py  models.py
src/openvtb/accounts/management/commands/: createinitialsuperuser.py
src/openvtb/accounts/migrations/: 0001_initial.py
src/openvtb/accounts/tests/: factories.py  test_auth.py  test_createinitialsuperuser.py  test_hijacking.py  test_oidc.py  test_user_manager.py
src/openvtb/accounts/tests/files/vcr_cassettes/OIDCFlowTests/: test_duplicate_email_unique_constraint_violated.yaml  test_happy_flow.yaml  test_happy_flow_existing_user.yaml
src/openvtb/celery/: app.py  logging.py
src/openvtb/components/: constants.py  drf_spectacular.py  schemas.py
src/openvtb/components/berichten/: admin.py  apps.py  cloudevents.py  constants.py  models.py  openapi.yaml  tasks.py
src/openvtb/components/berichten/api/: schema.py  serializers.py  urls.py  viewsets.py
src/openvtb/components/berichten/api/tests/: test_auth.py  test_bericht.py  test_bericht_ontvanger.py  test_bericht_validators.py  test_cloudevents.py
src/openvtb/components/berichten/api/tests/files/vcr_cassettes/TestApiOidcAuthentication/: test_get.yaml  test_invalid_token.yaml  test_valid_client_credentials_token.yaml  test_valid_token_oidc_create_user_false.yaml  test_valid_token_username_password.yaml
src/openvtb/components/berichten/migrations/: 0001_initial.py  0002_alter_bericht_handelings_perspectief_and_more.py  0002_alter_bericht_referentie.py
src/openvtb/components/berichten/tests/: factories.py  test_admin.py  test_tasks.py
src/openvtb/components/taken/: admin.py  apps.py  cloudevents.py  constants.py  models.py  openapi.yaml  schemas.py  tasks.py  utils.py  validators.py
src/openvtb/components/taken/api/: filters.py  schema.py  serializers.py  urls.py  utils.py  validators.py  viewsets.py
src/openvtb/components/taken/api/tests/: test_auth.py  test_betaaltaak.py  test_cloudevents.py  test_externetaak.py  test_externetaak_soort.py  test_externetaak_validators.py  test_filters.py  test_formuliertaak.py  test_gegevensuitvraagtaak.py  test_urltaak.py
src/openvtb/components/taken/api/tests/files/vcr_cassettes/TestApiOidcAuthentication/: test_get.yaml  (+4 more)
src/openvtb/components/taken/migrations/: 0001_initial.py  0002_alter_externetaak_handelings_perspectief.py
src/openvtb/components/taken/tests/: factories.py  test_admin.py  test_json_schemas.py  test_models.py  test_tasks.py
src/openvtb/components/utils/: schemas.py  serializers.py  validators.py
src/openvtb/components/verzoeken/: admin.py  apps.py  constants.py  forms.py  models.py  openapi.yaml  schemas.py  utils.py  widgets.py
src/openvtb/components/verzoeken/api/: schema.py  serializers.py  urls.py  utils.py  validators.py  viewsets.py
src/openvtb/components/verzoeken/api/tests/: test_auth.py  test_verzoek.py  test_verzoek_validators.py  test_verzoektype.py  test_verzoektypeversion.py
src/openvtb/components/verzoeken/migrations/: 0001_initial.py  0002_verzoek_mede_initiator.py
src/openvtb/components/verzoeken/tests/: factories.py  test_admin.py  test_models.py
src/openvtb/conf/: api.py  base.py  ci.py  dev.py  docker.py  jenkins.py  local_example.py  production.py  staging.py  test.py
src/openvtb/conf/locale/nl/LC_MESSAGES/: django.po
src/openvtb/fixtures/: berichten.json  default_admin_index.json  taken.json  verzoeken.json
src/openvtb/management/commands/: spectacular_for_component.py
src/openvtb/scss/admin/: _admin_theme.scss  _app_overrides.scss
src/openvtb/templates/: 503.html  index.html  main.html  master.html
src/openvtb/templates/admin/: base_site.html
src/openvtb/templates/admin/verzoeken/verzoektype/: object_history.html  submit_line.html
src/openvtb/templates/includes/: footer.html
src/openvtb/templates/maykin_2fa/: login.html
src/openvtb/templates/samples/: pager.html  pagination.html
src/openvtb/tests/: cloudevents.py  test_cors_configuration.py
src/openvtb/tests/api_strategy/: test_api_versioning.py
src/openvtb/utils/: __init__.py  api_mixins.py  api_testcase.py  apps.py  cloudevents.py  constants.py  context_processors.py  fields.py  json_utils.py  jsonschema_validators.py  middleware.py  oidc_backend.py  oidc_drf_middleware.py  schema.py  serializers.py  typing.py  validators.py
src/openvtb/utils/oidc_auth/: constants.py  oidc_backend.py  oidc_drf_middleware.py  plugins.py
src/openvtb/utils/oidc_auth/tests/: utils.py
src/openvtb/utils/tests/: test_celery_beat.py  test_serializers.py  test_validators.py
(+5 files in other folders)
